--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.7",
     "react-navigation-stack": "^2.3.11",
+    "react-redux": "^7.2.0",
     "reactotron-react-native": "^5.0.0",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
