--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.9",
+    "axios": "^0.19.2",
+    "immer": "^6.0.3",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-native": "0.62.2",
@@ -26,6 +29,7 @@
     "reactotron-redux": "^3.1.3",
     "reactotron-redux-saga": "^4.2.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0"
   },
