--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-community/masked-view": "^0.1.9",
     "axios": "^0.19.2",
     "immer": "^6.0.3",
+    "polished": "^3.5.1",
     "prop-types": "^15.7.2",
+    "randomcolor": "^0.5.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
