--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/masked-view": "^0.1.9",
     "axios": "^0.19.2",
+    "date-fns": "^2.12.0",
     "immer": "^6.0.3",
     "polished": "^3.5.1",
     "prop-types": "^15.7.2",
