--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "randomcolor": "^0.5.4",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-camera": "^3.23.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
