--- a/ios/FastFeet/Info.plist
+++ b/ios/FastFeet/Info.plist
@@ -43,6 +43,8 @@
 	<string></string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Roboto-Bold.ttf</string>
+		<string>Roboto-Regular.ttf</string>
 		<string>MaterialIcons.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
